--- a/submit_notification.html
+++ b/submit_notification.html
@@ -1,47 +1,64 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Sending Notification</title>
-  <style>
-    body { text-align: center; font-family: Arial, sans-serif; }
-    .loading { font-size: 18px; margin-top: 20px; }
-    .spinner {
-      border: 4px solid rgba(0, 0, 0, 0.1);
-      width: 36px;
-      height: 36px;
-      border-radius: 50%;
-      border-left-color: #09f;
-      animation: spin 1s linear infinite;
-      margin: 20px auto;
-    }
-    @keyframes spin { to { transform: rotate(360deg); } }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Update Total Cost</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+        .loading {
+            width: 40px;
+            height: 40px;
+            border: 4px solid #ccc;
+            border-top: 4px solid #007bff;
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+            margin-top: 20px;
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+    </style>
 </head>
 <body>
-  <h2>Updating Total Cost....</h2>
-  <div class="spinner"></div>
-  <div class="loading">Please wait...</div>
+    <h1 id="status">Updating Total Cost...</h1>
+    <div class="loading"></div>
 
-  <script>
-    // Ambil parameter dari URL
-    const urlParams = new URLSearchParams(window.location.search);
-    const customerName = urlParams.get('customer_name');
-    const customerEmail = urlParams.get('customer_email');
+    <script>
+        // URL Apps Script kamu
+        const scriptUrl = "https://script.google.com/macros/s/AKfycbxYEFK4ucrtX1i4yN_R_H_0J6tkJIKysF6Lpu65FN5tsO4u4M5EzisknhGDdltNcBiB/exec";
+        
+        // Ambil data dari URL
+        const params = new URLSearchParams(window.location.search);
 
-    if (customerName && customerEmail) {
-      // Panggil Google Apps Script (Agent.gs)
-      fetch('https://script.google.com/macros/s/AKfycbxYEFK4ucrtX1i4yN_R_H_0J6tkJIKysF6Lpu65FN5tsO4u4M5EzisknhGDdltNcBiB/exec?customer_name=' + encodeURIComponent(customerName) + '&customer_email=' + encodeURIComponent(customerEmail))
-        .then(response => response.text())
-        .then(data => {
-          console.log(data);
-          setTimeout(() => {
-            window.close(); // Tutup halaman setelah sukses
-          }, 2000);
+        // Kirim data ke Google Sheets
+        params.append("timestamp", Date.now());
+        fetch(scriptUrl + "?" + params.toString(), {
+            method: "GET",
+            mode: "no-cors"
         })
-        .catch(error => console.error('Error:', error));
-    } else {
-      document.querySelector(".loading").innerText = "Error: Missing parameters!";
-    }
-  </script>
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById("status").innerText = "Order submitted";
+                setTimeout(() => {
+                    window.close();
+                }, 2000);
+            })
+            .catch(error => {
+                document.getElementById("status").innerText = "Order Failed!" + error.message;
+                console.error(error);
+            });
+    </script>
 </body>
 </html>
